--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,68 @@
-.env
-*.pyc
-/.git/
-/.idea/
-/docs/
-/tmp/
-/data/
-/.venv/
-/.vscode/
+# Git
+.git
+.gitignore
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Project specific
+*.exe
+*.log
+temp/
+tmp/
+
+# CLI specific (not needed for server)
+chat.py
+chat2api.py
+start_cli.bat
+deploy_to_railway.bat
+deploy_railway_manual.bat
+railway_deploy.py
+
+# Documentation
+RAILWAY_DEPLOYMENT.md
+DEPLOYMENT_VERSION.txt
+
+# Build artifacts
+build/
+dist/
