--- a/requirements-cli.txt
+++ b/requirements-cli.txt
@@ -1,3 +1,8 @@
+# CLI-specific requirements for local development
+rich
+prompt-toolkit
+
+# Server requirements (for CLI to work with local server)
 fastapi
 uvicorn[standard]
 httpx
