--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,30 @@
 # Core server dependencies
-fastapi
-uvicorn[standard]
-httpx
-python-multipart
-python-dotenv
-aiofiles
-jinja2
-pydantic
-starlette
-websockets
-cryptography
-pyjwt
-requests
-apscheduler
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+httpx>=0.25.0
+python-multipart>=0.0.6
+python-dotenv>=1.0.0
+aiofiles>=23.0.0
+jinja2>=3.1.0
+pydantic>=2.0.0
+starlette>=0.27.0
+websockets>=11.0.0
+cryptography>=41.0.0
+pyjwt>=2.8.0
+requests>=2.31.0
+apscheduler>=3.10.0
 
 # AI and processing
-tiktoken
-tiktoken-ext
-numpy
+tiktoken>=0.5.0
+numpy>=1.24.0
 
 # System and utilities
-psutil
-Pillow
-pybase64
-curl-cffi
-ua-generator
+psutil>=5.9.0
+Pillow>=10.0.0
+pybase64>=1.3.0
+curl-cffi>=0.5.0
+ua-generator>=1.0.0
 
 # CLI interface (optional)
-rich
-prompt-toolkit
+rich>=13.0.0
+prompt-toolkit>=3.0.0
