Disable gateway for Railway deployment to fix RBAC access denied error

--- a/.env.production
+++ b/.env.production
@@ -28,8 +28,8 @@ RANDOM_TOKEN=${RANDOM_TOKEN:-true}
 OAI_LANGUAGE=${OAI_LANGUAGE:-en-US}
 
 # Gateway related
-ENABLE_GATEWAY=${ENABLE_GATEWAY:-true}
-AUTO_SEED=${AUTO_SEED:-true}
+ENABLE_GATEWAY=${ENABLE_GATEWAY:-false}
+AUTO_SEED=${AUTO_SEED:-false}
 
 # Railway specific
 ACTIVE_TOKEN=${ACTIVE_TOKEN:-aziz}
