--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "api_endpoint": "https://apitest1-production.up.railway.app/",
+  "api_endpoint": "https://apitest1-production.up.railway.app/v1/models",
   "default_model": "gpt-3.5-turbo",
   "active_token": "aziz"
 }
