Enable AUTO_SEED to fix Invalid Seed error

--- a/.env.production
+++ b/.env.production
@@ -29,7 +29,7 @@ OAI_LANGUAGE=${OAI_LANGUAGE:-en-US}
 
 # Gateway related
 ENABLE_GATEWAY=${ENABLE_GATEWAY:-false}
-AUTO_SEED=${AUTO_SEED:-false}
+AUTO_SEED=${AUTO_SEED:-true}
 
 # Railway specific
 ACTIVE_TOKEN=${ACTIVE_TOKEN:-aziz}
