feat: Add professional CLI with token management and API key generation
- Added comprehensive CLI interface with Rich library
- Implemented token management system (add/list/use/remove)
- Added OpenAI-compatible API key generation
- Implemented server synchronization for tokens and API keys
- Added middleware for automatic API key to token mapping
- Enhanced with interactive commands and auto-completion
- Removed provider-specific references for neutral deployment
- Added professional README with complete documentation
- Cleaned up unnecessary comments and files

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,19 @@ Thumbs.db
 *.log
 temp/
 tmp/
+
+# Sensitive data - DO NOT COMMIT
+tokens.json
+apikeys.json
+config.json
+.env
+.env.production
+.env.local
+data/
+data/*.txt
+data/*.json
+
+# Test files
+test_*.json
+sync_*.json
+*_test.json
