--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-# Production Environment Variables for Railway
+# Production Environment Variables
 ENVIRONMENT=production
 HOST=0.0.0.0
 PORT=${PORT:-5005}
@@ -30,6 +30,3 @@ OAI_LANGUAGE=${OAI_LANGUAGE:-en-US}
 # Gateway related
 ENABLE_GATEWAY=${ENABLE_GATEWAY:-false}
 AUTO_SEED=${AUTO_SEED:-true}
-
-# Railway specific
-ACTIVE_TOKEN=${ACTIVE_TOKEN:-aziz}
